k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
